tests/PSRule.Rules.Azure.Tests/vnet.tests.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.9.1.41621",
      "templateHash": "16943875226754338724"
    }
  },
  "parameters": {
    "vnetName": {
      "type": "string",
      "defaultValue": "vnet-001",
      "metadata": {
        "description": "The name of the virtual network."
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "The location to deploy resources."
      }
    },
    "addressPrefix": {
      "type": "array",
      "defaultValue": [
        "10.0.0.0/8"
      ],
      "metadata": {
        "description": ""
      }
    },
    "subnets": {
      "type": "array",
      "defaultValue": [
        {
          "name": "subnet1",
          "addressPrefix": "10.1.0.32/28",
          "securityRules": [
            {
              "name": "deny-rdp-inbound",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRanges": [
                  "3389"
                ],
                "access": "Deny",
                "priority": 200,
                "direction": "Inbound",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "VirtualNetwork"
              }
            },
            {
              "name": "deny-hop-outbound",
              "properties": {
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRanges": [
                  "3389",
                  "22"
                ],
                "access": "Deny",
                "priority": 200,
                "direction": "Outbound",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "*"
              }
            }
          ]
        },
        {
          "name": "subnet2",
          "addressPrefix": "10.1.0.64/28",
          "securityRules": []
        }
      ],
      "metadata": {
        "description": ""
      }
    }
  },
  "variables": {
    "copy": [
      {
        "name": "definedSubnets",
        "count": "[length(parameters('subnets'))]",
        "input": {
          "name": "[parameters('subnets')[copyIndex('definedSubnets')].name]",
          "properties": {
            "addressPrefix": "[parameters('subnets')[copyIndex('definedSubnets')].addressPrefix]",
            "networkSecurityGroup": {
              "id": "[resourceId('Microsoft.Network/networkSecurityGroups', format('nsg-{0}', parameters('subnets')[copyIndex('definedSubnets')].name))]"
            },
            "routeTable": {
              "id": "[resourceId('Microsoft.Network/routeTables/', format('route-{0}', parameters('subnets')[copyIndex('definedSubnets')].name))]"
            }
          }
        }
      }
    ],
    "subscriptionDefautTags": {
      "ffffffff-ffff-ffff-ffff-ffffffffffff": {
        "role": "Networking"
      },
      "nnnnnnnn-nnnn-nnnn-nnnn-nnnnnnnnnnnn": {
        "role": "Custom"
      },
      "00000000-0000-0000-0000-000000000000": {
        "role": "Networking"
      }
    },
    "rgLocation": {
      "eastus": "region-A",
      "region": "region-A",
      "custom": "Custom"
    },
    "gatewaySubnet": [
      {
        "name": "GatewaySubnet",
        "properties": {
          "addressPrefix": "[format('{0}/27', split(parameters('addressPrefix')[0], '/')[0])]"
        }
      },
      {
        "name": "hsm",
        "properties": {
          "addressPrefix": "10.1.0.128/27",
          "delegations": [
            {
              "name": "HSM",
              "properties": {
                "serviceName": "Microsoft.HardwareSecurityModules/dedicatedHSMs"
              }
            }
          ]
        }
      },
      {
        "name": "RouteServerSubnet",
        "properties": {
          "addressPrefix": "10.1.0.196/27"
        }
      }
    ],
    "allSubnets": "[union(variables('gatewaySubnet'), variables('definedSubnets'))]",
    "vnetAddressSpace": {
      "addressPrefixes": "[parameters('addressPrefix')]"
    }
  },
  "resources": [
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2020-06-01",
      "name": "[parameters('vnetName')]",
      "location": "[variables('rgLocation')[parameters('location')]]",
      "properties": {
        "addressSpace": "[variables('vnetAddressSpace')]",
        "subnets": "[variables('allSubnets')]"
      },
      "tags": "[variables('subscriptionDefautTags')[subscription().subscriptionId]]",
      "dependsOn": [
        "nsg"
      ]
    },
    {
      "condition": "[true()]",
      "copy": {
        "name": "nsg",
        "count": "[length(parameters('subnets'))]"
      },
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2019-04-01",
      "name": "[format('nsg-{0}', parameters('subnets')[copyIndex()].name)]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": "[parameters('subnets')[copyIndex()].securityRules]"
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2020-05-01",
      "name": "vnet-002/subnet-extra",
      "properties": {
        "addressPrefix": "10.100.0.0/24"
      }
    }
  ]
}
